--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,27 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+GROUP=io.github.mcgrady-dev
+ARTIFACT_NAME=viewbinding
+VERSION_CODE=1
+VERSION_NAME=1.0.0-SNAPSHOT
+
+# POM META
+POM_NAME=viewbinding
+POM_DESCRIPTION=Reduce viewbinding code boilerplate with kotlin property delegate.
+POM_URL=https://github.com/mcgrady-dev/viewbinding
+
+SCM_CONNECTION=https://github.com/mcgrady-dev/viewbinding.git
+SCM_DEV_CONNECTION=https://github.com/mcgrady-dev
+
+LICENCE_NAME=The Apache Software License, Version 2.0
+LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+
+DEVELOPER_ID=mcgrady911
+DEVELOPER_NAME=mcgrady
+DEVELOPER_EMAIL="mcgrady-dev@gmail.com"
+
+
+MAVEN_CENTRAL_URL=https://s01.oss.sonatype.org/content/repositories/releases/
+MAVEN_SNAPSHOT_URL=https://s01.oss.sonatype.org/content/repositories/snapshots/
