--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,4 +30,5 @@ navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx",
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 
